--- a/Clink/Clink/Base.lproj/Main.storyboard
+++ b/Clink/Clink/Base.lproj/Main.storyboard
@@ -209,7 +209,7 @@
                                     <color key="baseForegroundColor" systemColor="labelColor"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="aMr-RQ-33O" kind="presentation" animates="NO" id="2Ej-ez-ffI"/>
+                                    <segue destination="fS3-WX-LqM" kind="presentation" id="5Ix-2g-TdQ"/>
                                 </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" title="hostToggle" translatesAutoresizingMaskIntoConstraints="NO" id="dUm-15-fnP" userLabel="hostToggle">
@@ -247,61 +247,102 @@
             </objects>
             <point key="canvasLocation" x="305.79710144927537" y="738.61607142857144"/>
         </scene>
-        <!--DrinksTableView-->
-        <scene sceneID="skS-Dp-YtP">
+        <!--DrinksTableViewController-->
+        <scene sceneID="0kj-dI-mfI">
             <objects>
-                <tableViewController storyboardIdentifier="DrinksTableView" title="DrinksTableView" id="aMr-RQ-33O" customClass="DrinksTableViewControllerCell" customModule="Clink" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="BEj-Q5-5MU">
+                <tableViewController title="DrinksTableViewController" id="Qd2-BZ-b5q" customClass="DrinksTableViewController" customModule="Clink" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="mwu-to-yat">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DrinksTableViewCell" rowHeight="105" id="z7N-6A-zAV" userLabel="DrinksTableViewCell" customClass="DrinksTableViewCell" customModule="Clink" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="105"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DrinksCell" rowHeight="134" id="xyJ-BO-MH4" userLabel="DrinksCell" customClass="DrinksTableViewCell" customModule="Clink" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="134"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z7N-6A-zAV" id="ddn-al-H9s" userLabel="Content">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xyJ-BO-MH4" id="o4t-z6-Hhw">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="134"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Drink" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eea-EL-T6s">
-                                            <rect key="frame" x="106" y="11" width="288" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWG-NR-rTO">
+                                            <rect key="frame" x="65" y="11" width="329" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XQd-RZ-sBs">
-                                            <rect key="frame" x="7" y="0.0" width="91" height="93"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LEB-lt-Bc1">
+                                            <rect key="frame" x="0.0" y="1.5" width="65" height="62.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="65" id="J18-Pp-UJK"/>
+                                                <constraint firstAttribute="width" constant="65" id="Rfn-QZ-rSQ"/>
+                                            </constraints>
                                         </imageView>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="snz-xU-xY2">
-                                            <rect key="frame" x="258" y="74" width="136" height="31"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRU-JI-upR">
+                                            <rect key="frame" x="326" y="92.5" width="88" height="31.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" title="Add Drink"/>
                                             <connections>
-                                                <action selector="onAddDrinkClick:" destination="z7N-6A-zAV" eventType="touchUpInside" id="mV9-Jo-Phd"/>
+                                                <action selector="sendDrink:" destination="xyJ-BO-MH4" eventType="touchUpInside" id="NvG-A9-Uf9"/>
                                             </connections>
                                         </button>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Drink" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TPR-mA-Xur">
+                                            <rect key="frame" x="65" y="39.5" width="329" height="34"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="329" id="1Fq-cI-AjI"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="34" id="OU1-l6-JUg"/>
+                                                <constraint firstAttribute="height" constant="34" id="OY3-1T-0w7"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="TPR-mA-Xur" firstAttribute="top" secondItem="wWG-NR-rTO" secondAttribute="bottom" constant="8" id="1Kn-ze-nPV"/>
+                                        <constraint firstItem="wWG-NR-rTO" firstAttribute="top" secondItem="o4t-z6-Hhw" secondAttribute="topMargin" id="3uY-5z-QPD"/>
+                                        <constraint firstAttribute="trailing" secondItem="eRU-JI-upR" secondAttribute="trailing" id="6Zl-ez-AES"/>
+                                        <constraint firstItem="LEB-lt-Bc1" firstAttribute="top" secondItem="o4t-z6-Hhw" secondAttribute="top" id="92d-rl-a8S"/>
+                                        <constraint firstItem="eRU-JI-upR" firstAttribute="top" secondItem="TPR-mA-Xur" secondAttribute="bottom" constant="19" id="AeS-KQ-zJk"/>
+                                        <constraint firstItem="TPR-mA-Xur" firstAttribute="trailing" secondItem="o4t-z6-Hhw" secondAttribute="trailingMargin" id="DnH-tO-P1D"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="LEB-lt-Bc1" secondAttribute="bottom" constant="30" id="PvT-Cv-QHV"/>
+                                        <constraint firstItem="eRU-JI-upR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="o4t-z6-Hhw" secondAttribute="leading" constant="20" symbolic="YES" id="Ucl-mu-qr6"/>
+                                        <constraint firstItem="LEB-lt-Bc1" firstAttribute="leading" secondItem="o4t-z6-Hhw" secondAttribute="leading" id="dOz-hk-apD"/>
+                                        <constraint firstItem="wWG-NR-rTO" firstAttribute="top" secondItem="o4t-z6-Hhw" secondAttribute="topMargin" id="qwk-mF-kxu"/>
+                                        <constraint firstItem="wWG-NR-rTO" firstAttribute="leading" secondItem="LEB-lt-Bc1" secondAttribute="trailing" id="wtY-94-PkI"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="eRU-JI-upR" secondAttribute="bottom" constant="-1" id="yBM-ob-EQN"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="addDrinkButton" destination="snz-xU-xY2" id="viu-nE-clr"/>
-                                    <outlet property="drinkLabel" destination="eea-EL-T6s" id="oqr-qx-BcO"/>
-                                    <outlet property="profilePic" destination="XQd-RZ-sBs" id="Gzu-Gj-URz"/>
+                                    <outlet property="drinkText" destination="TPR-mA-Xur" id="zjt-ET-yeU"/>
+                                    <outlet property="profileImage" destination="LEB-lt-Bc1" id="Jhu-pN-ECe"/>
+                                    <outlet property="usernameLabel" destination="wWG-NR-rTO" id="h3U-oR-7AO"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="aMr-RQ-33O" id="Ca9-J7-VaU"/>
-                            <outlet property="delegate" destination="aMr-RQ-33O" id="Wmc-gJ-zWs"/>
+                            <outlet property="dataSource" destination="Qd2-BZ-b5q" id="9r3-sU-uaz"/>
+                            <outlet property="delegate" destination="Qd2-BZ-b5q" id="23M-Oe-4fl"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Kpx-gS-34C"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="l6a-Mn-OHc"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HGy-hd-iXL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uLB-J8-RCq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1260.8695652173915" y="738.61607142857144"/>
+            <point key="canvasLocation" x="1844.9275362318842" y="738.61607142857144"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XAQ-9c-dEf">
+            <objects>
+                <navigationController id="fS3-WX-LqM" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vEF-f0-VlJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Qd2-BZ-b5q" kind="relationship" relationship="rootViewController" id="E27-Mn-qTw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="di4-07-wLL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1088" y="739"/>
         </scene>
         <!--Settings-->
         <scene sceneID="fYL-Zh-gvp">
